use math.clamp if we can